# mcpd-sdk-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests-unit.yaml
example/: .mcpd.toml  README.md  main.py  pyproject.toml
example/readme_maker/: README.md  readme_maker.py
examples/anyagent/: README.md  main.py  pyproject.toml
examples/manual/: README.md  main.py  pyproject.toml
examples/pydantic-ai/: README.md  main.py  pyproject.toml
examples/readme_maker/: README.md  pyproject.toml  readme_maker.py
mcpd_sdk/: __init__.py  mcpd_client.py
scripts/: setup_uv.sh
src/mcpd/: __init__.py  _logger.py  dynamic_caller.py  exceptions.py  function_builder.py  mcpd_client.py  type_converter.py
src/mcpd_sdk/: __init__.py  dynamic_caller.py  exceptions.py  function_builder.py  mcpd_client.py
tests/: __init__.py  conftest.py  test_dynamic_caller.py  test_exceptions.py  test_function_builder.py  test_mcpd_client.py  test_type_converter.py
tests/unit/: test_dynamic_caller.py  test_exceptions.py  test_function_builder.py  test_mcpd_client.py  test_type_converter.py
