[project]
name = "mcpd-sdk"
version = "0.0.1"
description = "mcpd Python SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "tests" },
    "debugpy>=1.8.14",
]

lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

tests = [
    "pytest>=8.3.5",
]

all = [
    { include-group = "dev" },
    { include-group = "lint" },
    { include-group = "tests" },
]

[tool.ruff]
fix = true
line-length=120

[tool.ruff.lint]
select = ["I"]
